Some more maven improvements and unsigned checks